# PaperForge

./: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  pyproject.toml  readme.md  rules.md  zenn-article.md
agents/: __init__.py  orchestrator.py  runner.py
agents/extraction/: __init__.py  agent.py  tools.py
agents/graph/: __init__.py  agent.py  tools.py
agents/tutor/: __init__.py  agent.py  tools.py
api/: __init__.py  main.py
api/db/: __init__.py  firestore.py  vectors.py
api/routers/: adk_chat.py  agents.py  chat.py  graph.py  learning_path.py  papers.py
fine-tuning/: README.md  convert_scierc.py  inference.py  requirements.txt  train.py  train_lora.py  train_vertex.py
fine-tuning/configs/: dev.yaml  prod.yaml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AgentActivity.tsx  Layout.tsx
frontend/src/pages/: ChatPage.tsx  GraphPage.tsx  HomePage.tsx  LearningPathPage.tsx  PapersPage.tsx  QuizPage.tsx  SettingsPage.tsx
frontend/src/stores/: graphStore.ts  learningPathStore.ts  paperStore.ts  settingsStore.ts
