[project]
name = "paperforge"
version = "0.1.0"
description = "論文を自分の知識資産に変えるパーソナルナレッジエージェント"
readme = "readme.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kosuke Orihara" }]

dependencies = [
    # ADK & Gemini
    "google-adk>=0.1.0",
    "google-cloud-aiplatform>=1.40.0",
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.7",
    # Database
    "google-cloud-firestore>=2.14.0",
    # Vector Search
    "numpy>=1.24.0",
    # Utilities
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
